# fesd

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  LICENSE  readme.md
build-utils/: activatePython.bat  activatePython.ps1  activatePython.sh
example/: example.c  example.cpp  hello_world.c  hello_world.cpp  hello_world.py
include/fesd/: BaseCommander.hpp  FESerialDriver.hpp  config.h  fesd.h  fesd.hpp  version.hpp
include/fesd/types/: Common.hpp  Exception.hpp  SC2470.hpp
lib/: BaseCommander.cpp  DeviceConnection.cpp  DeviceConnection.hpp  FESerialDriver.cpp  GeneralProcessor.cpp  GeneralProcessor.hpp  MessageBuilder.cpp  MessageBuilder.hpp  SerialConsole.cpp  SerialConsole.hpp  Utility.cpp  Utility.hpp  version.cpp  wintargetsys.h
lib/bindings/: FESerialDriver_C.cpp  FESerialDriver_Py.cpp
lib/sc2470/: SC2470Commander.cpp  SC2470Commander.hpp  SC2470Processor.cpp  SC2470Processor.hpp
lib/types/: DeviceDetails.hpp
